:package: Fix name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inaribako",
+  "name": "com.nekometer.esnyafactory.inaribako",
   "version": "1.0.0",
   "description": "VRChat Prefab Collection for SDK2",
   "author": "esnya",
